# geoml-openenv

./: .gitignore  Dockerfile  README.md  geoml_env.py  geoml_models.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
