[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoml-rescue-env"
version = "1.0.0"
description = "A real-world ML Ops environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"